Refactor stream operations to use new toList() method